--- a/app/src/main/res/layout-land/popup.xml
+++ b/app/src/main/res/layout-land/popup.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.042" />
 
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imgPopup"
         android:layout_width="120dp"
         android:layout_height="126dp"
