--- a/app/src/main/res/layout-land/activity_perfil.xml
+++ b/app/src/main/res/layout-land/activity_perfil.xml
@@ -132,7 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/tvLinea"
+        android:text="@string/biografiaEjemplo"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
