--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -6,10 +6,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".ActivityAnuncio">
-
-
-
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -18,15 +14,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <ImageView
             android:id="@+id/anuncioFoto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="TODO"
-
             tools:src="@drawable/hotel" />
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton"
             android:layout_width="match_parent"
@@ -39,20 +32,21 @@
     <TextView
         android:id="@+id/tvTituloAnuncio"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/akaya_kanadaka_regular"
         android:text="@string/nombre_anuncio"
-        android:textSize="18sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="510dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,12 +58,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginTop="4dp"
                 android:gravity="center">
                 <TextView
                     android:id="@+id/informacion"
+                    android:fontFamily="@font/akaya_kanadaka_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textStyle="bold"
                     android:text="@string/informacion" />
 
@@ -77,7 +73,8 @@
                     android:id="@+id/tvDescripcionDetail"
                     android:layout_width="350dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="2dp"
+                    android:gravity="center"
                     android:text="@string/descripcion_anuncio"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +95,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="3dp"
 
-                        android:text="615079123" />
+                        android:text="61111111" />
 
                     <ImageButton
                         android:layout_marginStart="3dp"
@@ -115,7 +112,8 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="22sp"
+                    android:fontFamily="@font/akaya_kanadaka_regular"
                     android:textStyle="bold"
                     android:layout_marginTop="12dp"
                     android:text="@string/comentarios" />
@@ -131,11 +129,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/RecyclerViewComen"
                     android:layout_width="416dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="217dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="3dp"
                     app:layout_constraintHorizontal_bias="0.6"
-                    app:layout_constraintVertical_bias="0.0"></androidx.recyclerview.widget.RecyclerView>
+                    app:layout_constraintVertical_bias="0.0">
+
+                </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
 
 
