--- a/app/src/main/res/layout/activity_lista_anun.xml
+++ b/app/src/main/res/layout/activity_lista_anun.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +9,10 @@
 
     <TextView
         android:id="@+id/tvListaAnuncio"
-        android:layout_width="167dp"
-        android:layout_height="47dp"
+        android:fontFamily="@font/akaya_kanadaka_regular"
+        android:gravity="center"
+        android:layout_width="179dp"
+        android:layout_height="48dp"
         android:text="@string/listaAnuncios"
         android:textAllCaps="false"
         android:textColor="@color/black"
@@ -25,8 +28,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewAnu"
         android:layout_width="416dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="570dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
