--- a/app/src/main/res/layout/activity_lista_cat.xml
+++ b/app/src/main/res/layout/activity_lista_cat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +11,9 @@
         android:id="@+id/tvListaCat"
         android:layout_width="179dp"
         android:layout_height="48dp"
+        android:fontFamily="@font/akaya_kanadaka_regular"
         android:text="@string/listaCategorias"
+        android:gravity="center"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -26,9 +29,8 @@
         android:id="@+id/RecyclerCat"
         android:layout_width="416dp"
         android:layout_height="570dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="3dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
