--- a/app/src/main/res/layout/activity_lista_fav.xml
+++ b/app/src/main/res/layout/activity_lista_fav.xml
@@ -8,9 +8,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="167dp"
-        android:layout_height="47dp"
+        android:layout_width="179dp"
+        android:layout_height="48dp"
         android:text="@string/listaFavoritos"
+        android:fontFamily="@font/akaya_kanadaka_regular"
+        android:gravity="center"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -19,14 +21,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039"
+        app:layout_constraintVertical_bias="0.023"
         tools:text="@string/listaFavoritos" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewFav"
         android:layout_width="416dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="570dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
