--- a/app/src/main/res/layout/cardviewanu.xml
+++ b/app/src/main/res/layout/cardviewanu.xml
@@ -20,39 +20,40 @@
             android:layout_height="88dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/FotoPerfil"
                 android:layout_marginTop="5dp"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_marginStart="20dp"
-                app:srcCompat="@drawable/hotel"
-                tools:ignore="VectorDrawableCompat"
+                android:src="@drawable/icono_basico_perfil"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/TextoPublicacion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:text="TextView"
+                    android:fontFamily="@font/akaya_kanadaka_regular"
+                    android:text="@string/tAnuncio"
                     android:textColor="#000"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/descripcion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="290dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginBottom="1dp"
                     android:layout_weight="1"
-                    android:layout_marginBottom="10dp"
-                    android:text="Descripcion"
+                    android:text="@string/tAnuncio"
                     android:textSize="18sp" />
             </LinearLayout>
 
