--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,6 +9,7 @@
 
     <TextView
         android:id="@+id/textView2"
+        android:fontFamily="@font/akaya_kanadaka_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/editarPerfil"
@@ -29,7 +29,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/descripcionLogo" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -59,7 +60,9 @@
             android:gravity="center"
             android:hint="@string/popNombre"
             android:textSize="14sp"
-            app:layout_editor_absoluteX="25dp" />
+            app:layout_editor_absoluteX="25dp"
+            android:autofillHints=""
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/popupApellido"
@@ -68,7 +71,9 @@
             android:gravity="center"
             android:hint="@string/popApellido"
             android:textSize="14sp"
-            app:layout_editor_absoluteX="25dp" />
+            app:layout_editor_absoluteX="25dp"
+            android:autofillHints=""
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/popupBiografia"
@@ -77,7 +82,9 @@
             android:gravity="center"
             android:hint="@string/popBiografia"
             android:textSize="14sp"
-            app:layout_editor_absoluteX="25dp" />
+            app:layout_editor_absoluteX="25dp"
+            android:autofillHints=""
+            android:inputType="text" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,6 +94,7 @@
 
             <Button
                 android:id="@+id/btnCGuardar"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -96,6 +104,7 @@
 
             <Button
                 android:id="@+id/btnCCancelar"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
