--- a/app/src/main/res/menu/menu_contextual.xml
+++ b/app/src/main/res/menu/menu_contextual.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<item
+    <item
         android:id="@+id/opcion1"
-        android:title="Ayuda"
+        android:title="@string/action_ponerF"
+
         />
     <item
         android:id="@+id/opcion2"
-        android:title="Salir"
-        />-->
+        android:title="@string/action_quitarF"
+        />
 </menu>
