--- a/app/src/main/res/layout-land/activity_lista_fav.xml
+++ b/app/src/main/res/layout-land/activity_lista_fav.xml
@@ -39,6 +39,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
