--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -63,14 +63,15 @@
                 android:orientation="vertical"
                 android:layout_marginTop="4dp"
                 android:gravity="center">
+
                 <TextView
                     android:id="@+id/informacion"
+                    android:layout_width="153dp"
+                    android:layout_height="67dp"
                     android:fontFamily="@font/akaya_kanadaka_regular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:text="@string/informacion"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:text="@string/informacion" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvDescripcionDetail"
@@ -111,28 +112,28 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="22sp"
-                    android:fontFamily="@font/akaya_kanadaka_regular"
-                    android:textStyle="bold"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/comentarios" />
-
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fabAddComent"
-                    android:layout_width="wrap_content"
+                    android:layout_width="41dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="160dp"
                     android:clickable="true"
                     app:srcCompat="@drawable/ic_add_coment" />
 
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/akaya_kanadaka_regular"
+                    android:text="@string/comentarios"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/RecyclerViewComen"
                     android:layout_width="416dp"
-                    android:layout_height="217dp"
+                    android:layout_height="360dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="3dp"
                     app:layout_constraintHorizontal_bias="0.6"
