Se crea la nueva activity donde se creara un formulario para crear nuevos anuncios integrando pago por paypal

--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -114,7 +114,7 @@
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fabAddComent"
-                    android:layout_width="41dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="160dp"
                     android:clickable="true"
