--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="crearPopup"
     tools:context=".ActivityPerfil">
 
     <TextView
@@ -88,86 +87,6 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_logout" />
 
-    <!--<LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="24dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editarPerfil">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvSeguidores"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="45dp"
-                android:gravity="center"
-                android:text="@string/tvSeguidores"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tvSiguiendo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="45dp"
-                android:gravity="center"
-                android:text="@string/tvSiguiendo"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tvComentario"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/tvComentario"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvNSeguidores"
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="32dp"
-                android:text="@string/tvNSeguidores"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvNSiguiendo"
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="30dp"
-                android:text="@string/tvNSeguidores"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvNComentario"
-                android:layout_width="97dp"
-                android:layout_height="match_parent"
-                android:text="@string/tvNComentario"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-    </LinearLayout>-->
-
-
     <TextView
         android:id="@+id/tvBibliografia"
         android:layout_width="match_parent"
@@ -180,6 +99,15 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editarPerfil" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewAnuncios"
+        android:layout_width="416dp"
+        android:layout_height="340dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBibliografia"/>
 
     <LinearLayout
         android:id="@+id/linearLayout6"
